fix (design): change microsoft color to more contrasting

--- a/style/cv.css
+++ b/style/cv.css
@@ -82,7 +82,7 @@
 
 .cv-work_microsoft h2,
 .cv-work_microsoft h3 {
-  color: #09f;
+  color: #06c;
 }
 
 .cv-hr {
